syntax = "proto3";
import "google/protobuf/descriptor.proto";
import "google/protobuf/any.proto";
package golang.example.policy;
option go_package = "/stream";





message KrakenSubscriptionData
{
  uint32   depth       = 1;
  uint32   interval    = 2;
  string  name        = 3;
  bool    snapshot	  = 4;
  string  token       = 5;
};



message KrakenWsMessageIncoming
{
  uint64  connectionID  = 1;
  string  event         = 2;
  string  status        = 3;
  string  version       = 4;
  uint32  reqid         = 5;
  uint32 channelID =6;
  string channelName =7;
  string pair =8;
  KrakenSubscriptionData subscription =9;
  string errorMessage	    = 10;
};

message KrakenWsMessageOutgoing
{
  string              event           = 1;
  uint32              reqid           = 2;
  repeated string     pair            = 3;
  KrakenSubscriptionData    subscription    = 4;
};

message TickerInformation
{
  repeated google.protobuf.Any a = 1;
  repeated google.protobuf.Any b = 2;
  repeated google.protobuf.Any v = 3;
  repeated google.protobuf.Any l = 4;
  repeated google.protobuf.Any h = 5;
  repeated google.protobuf.Any o = 6;
};

message TickerMessage
{
    uint32 ChannelId = 1;
    TickerInformation TickerInformation = 2;
    string channelName = 3;
    string pair = 4;
}




